[metadata]
name = a10-neutron-lbaas
version = 1.0
summary = A10 Networks Openstack LBaaS Driver, Juno
description-file =
    README.md
author = A10 Networks
author-email = dougw@a10networks.com
home-page = https://github.com/a10networks/a10-neutron-lbaas
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Internet

[files]
packages =
    a10_neutron_lbaas
